// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`typescript processor > should emit package fields and tsconfig 1`] = `
{
  "tsconfig.json": {
    "compilerOptions": {
      "declaration": true,
      "erasableSyntaxOnly": true,
      "module": "node18",
      "outDir": "dist",
      "sourceMap": false,
      "target": "esnext",
      "types": [],
    },
    "extends": "@tsconfig/strictest/tsconfig.json",
    "include": [
      "src/**/*.ts",
    ],
  },
}
`;

exports[`typescript processor > should emit tsconfig extending svelte-kit when uiFramework is svelte 1`] = `
{
  "tsconfig.json": {
    "compilerOptions": {
      "declaration": true,
      "erasableSyntaxOnly": true,
      "module": "node18",
      "outDir": "dist",
      "sourceMap": false,
      "target": "esnext",
      "types": [],
    },
    "extends": "./.svelte-kit/tsconfig.json",
    "include": [
      "src/**/*.ts",
    ],
  },
}
`;

exports[`typescript processor > should emit tsconfig with preact jsx settings when uiFramework is preact 1`] = `
{
  "tsconfig.json": {
    "compilerOptions": {
      "declaration": true,
      "erasableSyntaxOnly": true,
      "jsx": "react-jsx",
      "jsxImportSource": "preact",
      "module": "node18",
      "outDir": "dist",
      "sourceMap": false,
      "target": "esnext",
      "types": [],
    },
    "extends": "@tsconfig/strictest/tsconfig.json",
    "include": [
      "src/**/*.ts",
    ],
  },
}
`;

exports[`typescript processor > should emit tsconfig with react jsx settings when uiFramework is react 1`] = `
{
  "tsconfig.json": {
    "compilerOptions": {
      "declaration": true,
      "erasableSyntaxOnly": true,
      "jsx": "react-jsx",
      "module": "node18",
      "outDir": "dist",
      "sourceMap": false,
      "target": "esnext",
      "types": [],
    },
    "extends": "@tsconfig/strictest/tsconfig.json",
    "include": [
      "src/**/*.ts",
    ],
  },
}
`;

exports[`typescript processor > should emit tsconfig with vue jsx settings when uiFramework is vue 1`] = `
{
  "tsconfig.json": {
    "compilerOptions": {
      "declaration": true,
      "erasableSyntaxOnly": true,
      "jsx": "preserve",
      "jsxImportSource": "vue",
      "module": "node18",
      "noEmit": true,
      "outDir": "dist",
      "sourceMap": false,
      "target": "esnext",
      "types": [],
    },
    "extends": "@tsconfig/strictest/tsconfig.json",
    "include": [
      "src/**/*.ts",
    ],
  },
}
`;

exports[`typescript processor > should only add dependency & tsconfig if bundler is not typescript 1`] = `
{
  "tsconfig.json": {
    "compilerOptions": {
      "declaration": true,
      "erasableSyntaxOnly": true,
      "module": "node18",
      "outDir": "dist",
      "sourceMap": false,
      "target": "esnext",
      "types": [],
    },
    "extends": "@tsconfig/strictest/tsconfig.json",
    "include": [
      "src/**/*.ts",
    ],
  },
}
`;
